Tweak: Slight tidy up of header tabs for main_page.tpl.php - hack fix of extra white space by reducing font size! - couple of missing images - bit of shading and some curved ends for breadcrumb holder

--- a/2.1/catalog/templates/fallback/stylesheet.css
+++ b/2.1/catalog/templates/fallback/stylesheet.css
@@ -24,8 +24,12 @@ FORM { display: inline; }
 
 /* Header */
 TR.header { background: #ffffff; }
-TR.headerNavigation { background: #bbbbbb; }
-TD.headerNavigation { font-family: Verdana, Arial, sans-serif; font-size: 10px; background: #bbbbbb; color: #000000; font-weight : bold; height:20px; background-image:url(images/infobox/top_header.png); background-repeat:repeat-x; padding-right:5px; }
+td.nav_tabs { text-align: right; vertical-align: bottom; font-size: 2px; padding-right: 5px; }
+td.breadcrumb { background-image:url(images/breadcrumb_background.png); background-repeat:repeat-x; font-family: Verdana, Arial, sans-serif; font-size: 10px; color: #000000; font-weight : bold; height: 22px; border-top: 1px solid #dddddd; border-bottom: 1px solid #dddddd; }
+td.breadcrumb_left { background-image:url(images/breadcrumb_left.png); }
+td.breadcrumb_right { background-image:url(images/breadcrumb_right.png); }
+TR.headerNavigation { background: #ffffff; }
+TD.headerNavigation { font-family: Verdana, Arial, sans-serif; font-size: 10px; background: #ffffff; color: #000000; font-weight : bold; height:24px; border-top: 1px solid #dddddd; border-bottom: 1px solid #dddddd;}
 A.headerNavigation { color: #000000; }
 A.headerNavigation:hover { color: #666666; }
 TR.headerError { background: #ff0000; }
@@ -46,7 +50,7 @@ TD.infoBoxHeading { font-family: Verdana, Arial, sans-serif; font-size: 10px; fo
 .infoBoxNoticeContents { background: #FFE6E6; font-family: Verdana, Arial, sans-serif; font-size: 10px; }
 TD.infoBox, SPAN.infoBox { font-family: Verdana, Arial, sans-serif; font-size: 10px; }
 .infoBoxBottom { background-image:url(images/infobox/bottom_center.png); background-repeat:repeat-x; }
-.infoBoxScrolling { background: #ffffff; border-left: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd }
+.infoBoxScrolling { background: #ffffff; border-left: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; }
 
 /* Contentboxes */
 .contentBox { background: #ffffff; font-family: Verdana, Arial, sans-serif; font-size: 10px; border-left: 1px solid #dddddd; border-right: 1px solid #dddddd; border-bottom: 1px solid #dddddd; }
